[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
+    background-color: #fff;
+    margin-top: 20px;
 }
 
 .center {
@@ -20,4 +20,8 @@ body {
     height: 50px;
     text-align:right;
 }
-
+#first-menu {
+   
+   text-align: right;
+   padding: 20px 20px 20px 20px;
+}
