--- a/ui/style.css
+++ b/ui/style.css
@@ -20,8 +20,7 @@ body {
     height: 50px;
     text-align:right;
 }
-#first-menu {
-   
-   text-align: right;
-   padding: 20px 20px 20px 20px;
+#second-menu {
+    text-align: left;
+      padding: 20px 20px 20px 20px;
 }
