--- a/ui/style.css
+++ b/ui/style.css
@@ -23,5 +23,10 @@ body {
 }
  #first-menu {
         float:left; 
-      padding: 20px 20px 20px 20px;
+     width:500px;
+}
+#second-menu {
+    float:left; 
+     width:500px;
+     
 }
